Fix #208: Change compiler target to 8